Tiny comment in bert_automatic.

--- a/bert_automatic.ipynb
+++ b/bert_automatic.ipynb
@@ -11,6 +11,8 @@
     "\n",
     "There is another notebook, doing the same with lower-level PyTorch tools only.\n",
     "\n",
+    "This notebook successfully reproduces the results of [this paper](https://arxiv.org/pdf/1911.09304.pdf).\n",
+    "\n",
     "## References:\n",
     "* https://huggingface.co/course/chapter3/4?fw=pt - HuggingFace transformers course reference"
    ]
