Fixes to CUDA loading and model metrics calculations on validation dataset.

--- a/bert_mypersonality.ipynb
+++ b/bert_mypersonality.ipynb
@@ -7888,14 +7888,12 @@
     "        print(\"MPS not available because the current MacOS version is not 12.3+ \"\n",
     "              \"and/or you do not have an MPS-enabled device on this machine.\")\n",
     "        device = torch.device(\"cpu\")\n",
-    "elif torch.backends.cuda.is_built():\n",
-    "    if torch.backends.cuda.is_available():\n",
-    "        device = torch.device(\"cuda\")\n",
-    "    else:\n",
-    "        print(\"CUDA is built, but not available\")\n",
-    "        device = torch.device(\"cpu\")\n",
+    "elif torch.cuda.is_available():\n",
+    "        device = torch.device(\"cuda:0\")\n",
+    "\n",
     "else:\n",
     "    print(\"Neither MPS, nor CUDA backends are available.\")\n",
+    "    device = torch.device(\"cpu\")\n",
     "    \n",
     "    \n",
     "model.to(device)\n",
@@ -8572,8 +8570,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "f641e103-227c-4e7c-9aaa-09bf0474dddb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy': 0.631716223265519}"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datasets import load_metric\n",
+    "\n",
+    "\n",
+    "validation_dataloader = DataLoader(ds['validation'], shuffle=True, batch_size=8)\n",
+    "\n",
+    "metric = load_metric(\"accuracy\")\n",
+    "model.eval()\n",
+    "for batch in validation_dataloader:\n",
+    "    labels = batch[\"labels\"]\n",
+    "    device_labels = torch.as_tensor(labels, device=device)\n",
+    "    del batch[\"labels\"]\n",
+    "    del batch[\"text\"]\n",
+    "\n",
+    "    batch = {k: torch.transpose(torch.stack(default_convert(v)), 0, 1) for k, v in batch.items()}\n",
+    "    batch = {k: v.to(device) for k, v in batch.items()}\n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(**batch)\n",
+    "\n",
+    "    logits = outputs.logits\n",
+    "    softmax = torch.nn.Softmax()\n",
+    "    # for index, item in enumerate(logits):\n",
+    "        # print(f\"probabilities = {softmax(item)}\")\n",
+    "        # print(f\"label = {labels[index]}\")\n",
+    "    predictions = torch.argmax(logits, dim=-1)\n",
+    "    metric.add_batch(predictions=predictions, references=device_labels)\n",
+    "\n",
+    "metric.compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a279091-4fb7-4ff7-8322-44bcdf7cb257",
    "metadata": {},
    "outputs": [],
    "source": []
